# cptest

./: README.md  brute.cpp  check.py  gen.cpp  sol.cpp
cp-stress-tester/: pyproject.toml
cp-stress-tester/cptest/: __init__.py  cli.py  compare.py  compiler.py  reporter.py  runner.py
cp-stress-tester/cptest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
fails/: seed_1.txt  seed_58.txt
